--- a/Code/Projet ML.ipynb
+++ b/Code/Projet ML.ipynb
@@ -2643,8 +2643,10 @@
     "train[\"location\"]= train[\"location\"].astype(str)\n",
     "\n",
     "def do_fuzzy_search(country):\n",
+    "    #Prendre en compte les NAN sinon bug après\n",
     "    if country == \"NaN\":\n",
     "        country= country\n",
+    "    #Transofrmation en code à trois lettre:\n",
     "    else:\n",
     "        try:\n",
     "            result = pycountry.countries.search_fuzzy(country)\n",
