--- a/Code/ML_Project.ipynb
+++ b/Code/ML_Project.ipynb
@@ -2201,20 +2201,33 @@
    },
    "outputs": [],
    "source": [
-    "#Principal Component Analysis\n",
-    "from sklearn.decomposition import PCA\n",
-    "pca = PCA(n_components = 10)\n",
-    "pca.fit(X_train)\n",
-    "X_test_pca = pca.transform(X_test)\n",
     "#Hyper-parameter tuning\n",
-    "from sklearn import datasets\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "iris = datasets.load_iris()\n",
-    "parameters = {'solver': ('lbfgs', 'saga'), 'C': [1:10]}\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "\n",
+    "tfidf = TfidfVectorizer(tokenizer=spacy_tokenizer)\n",
+    "# Define classifier\n",
+    "classifier = LogisticRegression()\n",
+    "\n",
+    "# Create pipeline\n",
+    "pipe = Pipeline([('vectorizer', tfidf),\n",
+    "                 ('classifier', classifier)])\n",
+    "\n",
+    "parameters = {'solver': ('lbfgs', 'saga'), 'C': [1,10]}\n",
+    "\n",
     "lr = LogisticRegression(max_iter =2000)\n",
-    "clf = GridSearchCV(lr, parameters)\n",
-    "clf.fit(iris.data, iris.target)"
+    "\n",
+    "search= [{\"classifier\": [LogisticRegression()]},\n",
+    "         {\"classifier\": [LogisticRegressionCV()]},\n",
+    "         {\"classifier\": [RandomForestClassifier()]}\n",
+    "         {\"classifier\": [GaussianNB()]}\n",
+    "         {\"classifier\": [RandomForestClassifier()]}]\n",
+    "\n",
+    "\n",
+    "clf = GridSearchCV(pipe,param_grid=search)\n",
+    "best_model=clf.fit(X_train, y_train)"
    ]
   },
   {
